# OPENCLAW

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements-rag.txt
.claude/: hooks.json  settings.json
Knowledge/: README.md
Projects/: README.md
Research/: README.md
Workflows/: README.md
config/: __init__.py  litellm_config.yaml  rag_config.yaml  rag_config_model.py
docker/: docker-compose.qdrant.yml
docs/: AGENT0_DOMAIN_ROUTING.md  AGENT0_DUAL_CORPUS_BOOTSTRAP.md  AGENT0_GOLDEN_HARNESS.md  AGENT0_GOLDEN_QUESTIONS.md  AGENT0_INGESTION.md  AGENT0_LOCAL_RUNNER.md  AGENT0_OBSERVABILITY.md  AGENT0_ROLLBACK.md  AGENT0_RUNBOOK.md  AGENT0_SMOKE.md  DEVELOPMENT.md  GATEWAY1_ROUTING_POLICY.md  GATEWAY1_TOKEN_ECONOMY.md  GATEWAY2_BASELINE.md  GATEWAY_FINAL_RUNBOOK.md  GATEWAY_SETUP.md  RAG_ALIAS_COMPARISON.md  RAG_COLLECTION_GUARD.md  RAG_CONTEXT_BUDGET.md  RAG_EMBEDDING_MIGRATION.md  RAG_GENERATION_BUDGET.md  RAG_LATENCY_BASELINE.md  RAG_OBSERVABILITY_EVENTS.md  RAG_RUNBOOK.md  RAG_RUN_TRACE.md
evaluation/: README.md  __init__.py  benchmark_queries.yaml  compare_dense_embeddings.py  eval_latency.py  eval_mrr.py  eval_ndcg.py  eval_precision.py  eval_recall.py  expected_results.yaml  run_dense_baseline.py
scripts/: __init__.py  bootstrap_corpus.py  bootstrap_sandbox.sh  check_agent0_readiness.py  check_gateway_readiness.sh  check_litellm_gateway.sh  compare_golden_runs.py  ingest_corpus.py  openclaw.py  rag_ask_local.py  rag_ingest_synthetic.py  run_golden_harness.py  run_golden_questions.py  run_local_agent.py  (+9 more)
(+222 files in other folders)
